--- a/demo-cuponeria/package.json
+++ b/demo-cuponeria/package.json
@@ -5,11 +5,23 @@
   "scripts": {
     "dev": "next dev -p 30001",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint components pages"
   },
   "dependencies": {
     "next": "10.0.8",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prop-types": "^15.7.2"
   }
 }
