--- a/package.json
+++ b/package.json
@@ -6,15 +6,19 @@
   "author": "Rafael Nathan <rafael.nathan@mycare.life>",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev"
+    "dev": "next dev",
+    "build": "next build && next export",
+    "start": "next start"
   },
   "dependencies": {
     "next": "^11.1.2",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.30",
+    "@types/styled-components": "^5.1.15",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
     "typescript": "^4.4.4"
