--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/liocuponeria/fe-chall1.git",
-  "author": "Rafael Nathan <rafael.nathan@mycare.life>",
+  "author": "Nathan Osti <nathanosti.job@gmail.com>",
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
@@ -15,10 +15,13 @@
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-slick": "^0.28.1",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "^17.0.30",
+    "@types/react-slick": "^0.23.7",
     "@types/styled-components": "^5.1.15",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
