--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^17.0.30",
     "@types/react-slick": "^0.23.7",
     "@types/styled-components": "^5.1.15",
+    "babel-plugin-styled-components": "^1.13.3",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
     "typescript": "^4.4.4"
